# HWRS_564_geospatial

./: .gitignore  HW5_Building_Blocks_5_withBlanks.ipynb  README.md  homework5.ipynb  main.py  pyproject.toml
